@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-24T01:03:04Z",
-  "count_outdated" : 126,
-  "uniques_outdated" : 108,
+  "timestamp" : "2025-12-27T01:01:49Z",
+  "count_outdated" : 128,
+  "uniques_outdated" : 110,
   "count" : 130,
   "uniques" : 112,
   "clones" : [
-    {
-      "timestamp": "2025-12-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-12-17T00:00:00Z",
       "count": 1,
